bugfix firefox actor img too big

--- a/css/etic-opendata.less
+++ b/css/etic-opendata.less
@@ -331,6 +331,10 @@ nav {
 			height: 200px;
 			width: 200px;
 			text-align: center;
+
+			img {
+				max-width: 200px;
+			}
 		}
 
 		h3 {
